--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "react-toast-popup",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "React Toast Popup is a simple and customizable toast notification component for React applications.",
   "main": "dist/index.js",
-  "module": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs",
