--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-toast-popup",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "React Toast Popup is a simple and customizable toast notification component for React applications.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -29,6 +29,15 @@
     "type": "git",
     "url": "https://github.com/piyush-eon/react-toast-popup.git"
   },
+  "keywords": [
+    "react",
+    "react-toast",
+    "notification",
+    "toast",
+    "react-component",
+    "push",
+    "alert"
+  ],
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "react-icons": "^5.2.1",
